package edu.fiuba.algo3.modelo.edificios;

public class Aeropuerto extends Edificio{
    public Aeropuerto(String pista) {
        super(pista);
    }
}
