package edu.fiuba.algo3.modelo.edificios;

public class Biblioteca extends Edificio{
    public Biblioteca(String pista) {
        super(pista);
    }
}
